[104736] DTD validator does not resolve referenced DTD's properly